Fixed different z-index issue on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -256,6 +256,7 @@ body {
   padding: 0;
   background: $body-color-overlay;
   transition: all .1s ease;
+  z-index: 1;
 }
 
 .hamburgerListItem {
@@ -624,21 +625,21 @@ body {
     width: 100%;
     text-align: center;
     // margin-top: 15px;
-    z-index: 1;
+    // z-index: 1;
   }
 
   @include media($mobile) {
     width: 100%;
     text-align: center;
     // margin-top: 20px;
-    z-index: 1;
+    // z-index: 1;
   }
 
   @include media($small-mobile) {
     width: 100%;
     text-align: center;
     // margin-top: 20px;
-    z-index: 1;
+    // z-index: 0;
   }
 
 }
